--- a/src/Styles/Service1.css
+++ b/src/Styles/Service1.css
@@ -9,12 +9,13 @@
   position: relative;
   background: url('../Assets/roof1.jpg') center/cover no-repeat;
   text-align: center;
-  padding: 60px 15px;
+  padding: 80px 15px;
   color: white;
   margin: 20px auto;
   border-radius: 20px;
-  width: 95%;
+  width: 90%;
   max-width: 1200px;
+  height: 70vh;
 
 }
 
