--- a/src/Styles/Services.css
+++ b/src/Styles/Services.css
@@ -29,9 +29,9 @@
   overflow: hidden;
   border-radius: 15px;
   cursor: pointer;
-  background-color: white;
+  /* background-color: white; */
   transition: transform 0.3s ease;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
+  /* box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4); */
 }
 
 .service-card:hover {
@@ -40,9 +40,9 @@
 
 /* Image */
 .service-image {
-  width: 85%;
-  height: 85%;
-  margin: 8%;
+  width: 100%;
+  height: 100%;
+  /* margin: 8%; */
   border-radius: 20px;
   object-fit: cover;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
