--- a/src/Styles/Services.css
+++ b/src/Styles/Services.css
@@ -122,9 +122,9 @@
   }
 
   .service-image {
-    width: 90%;
-    height: 80%;
-    margin: 5%;
+    width: 100;
+    height: 100%;
+    /* margin: 5%; */
   }
 
   .service-overlay h3 {
