--- a/src/Styles/ContactMapDocs.css
+++ b/src/Styles/ContactMapDocs.css
@@ -12,7 +12,7 @@
   font-family: Arial, sans-serif;
   width: 100%;
   max-width: 1100px;
-  margin: 40px auto;
+  margin: 20px auto;
   padding: 0;
   background-color: #b07473;
   /* border-radius: 34px; */
@@ -96,7 +96,7 @@ margin: auto;
 .form-row1 {
   display: flex;
   flex-direction: column;
-  /* gap: 10px; */
+  gap: 10px;
   width: 100%;
 }
 
