--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -157,8 +157,9 @@
   .navbar {
     flex-direction: column;
     align-items: flex-start;
-    padding: 20px;
+    /* padding: 20px; */
     position: relative;
+    margin: auto;
   }
 
   .nav-links {
